NOW I FINISH THE BASIC SOUND VISUALIZER
what i have to do

1. sound visualizer design
2. some particle..(NOT REQUIRED)
3. color change btn
4. music change btn
5. background

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="canvasContainer" id="canvasContainer"></div>
-    <!--삼각함수를 이용한 음악 상호작용 디스플레이-->
+   <!--삼각함수를 이용한 음악 상호작용 디스플레이-->
     <script src="app.js"></script>
+    <script src="changeColor.js"></script>
 </body>
 </html>
