play btn + sound visualizer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <title>Document</title>
 </head>
 <body>
-   <!--삼각함수를 이용한 음악 상호작용 디스플레이-->
+
+    <input type="button" value="PAUSE" class="playBtn">
+
+    <!--삼각함수를 이용한 음악 상호작용 디스플레이-->
     <script src="app.js"></script>
     <script src="changeColor.js"></script>
 </body>
