--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.0/lib/p5.min.js"></script>
     <script src="p5.sound.js"></script>
@@ -7,14 +8,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
+<!--   <audio controls="controls" autoplay>
+        <source src="horse.ogg" type="audio/ogg" />
+        <source src="horse.mp3" type="audio/mp3" />
+        Your browser does not support the audio element.
+      </audio>
+--> 
     <title>Document</title>
 </head>
+
 <body>
+    
+    <nav>
+        <input type="button" value="◀" class="prev Btn">
+        <input type="button" value="PLAY" class="play Btn">
+        <input type="button" value="▶" class="next Btn">
+    </nav>
+    <h1 class="music">music</h1>
+    <!--삼각함수를 이용한 음악 상호작용 디스플레이-->  
 
-    <input type="button" value="PAUSE" class="playBtn">
-
-    <!--삼각함수를 이용한 음악 상호작용 디스플레이-->
-    <script src="app.js"></script>
     <script src="changeColor.js"></script>
+    <script src="changeMusicBtn.js"></script>
+    <script src="app.js"></script>
 </body>
+
 </html>
